# BIOSET-NEXTFLOW

./: README.md  main.nf  nextflow.config  pyproject.toml  submit_cpu_agg.sh  submit_nextflow.sh  submit_rechunk.sh
configs/mcmicro/: marker_thresholds.yml  markers.csv  params.yml
containers/: Dockerfile.cpu  Dockerfile.gpu
scripts/: make_mcmicro_project.py  submit_full_pipeline.sh
src/bioset_preprocessing/: aggregation.py  checkpoint.py  cli.py  config.py  filtering.py  io.py  pipeline.py  validation.py  writer.py
src/bioset_preprocessing/adapters/: mcmicro_adapter.py
src/bioset_preprocessing/converters/: tiff_to_zarr.py
src/bioset_preprocessing/stages/: cc_filter.py  dilation.py  overlaps.py  threshold.py
