[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BioSET_Preprocessing"
version = "1.0.0"
description = "GPU-accelerated spatial overlap analysis pipeline for multi-channel biomedical imaging. Supports legacy thresholding and MCMICRO adapter modes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chahat Kalsi", email = "chahat.kalsi@nyu.edu"},
]
keywords = ["microscopy", "volumetric", "image-processing", "zarr", "dask", "mcmicro", "nextflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy",
    "scipy",
    "dask[array]",
    "zarr==2.18.7",
    "ome-zarr",
    "matplotlib",
    "cupy",
    "ome-types",
    # New dependencies for MCMICRO mode
    "tifffile",
    "pyyaml",
    "requests",
]

[project.optional-dependencies]
rechunk = [
    "rechunker==0.5.4",
]
# CPU-only installation (no cupy)
cpu = [
    "numpy",
    "scipy",
    "dask[array]",
    "zarr==2.18.7",
    "ome-zarr",
    "ome-types",
    "tifffile",
    "pyyaml",
    "requests",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]

[project.scripts]
bioset = "bioset_preprocessing.cli:main"

[project.urls]
Homepage = "https://github.com/nyu-vis-krueger-group/BioSET_Preprocessing"
Documentation = "https://github.com/nyu-vis-krueger-group/BioSET_Preprocessing#readme"
Repository = "https://github.com/nyu-vis-krueger-group/BioSET_Preprocessing"
Issues = "https://github.com/nyu-vis-krueger-group/BioSET_Preprocessing/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bioset_preprocessing"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
